--- a/src/AdventOfCode2016/project.json
+++ b/src/AdventOfCode2016/project.json
@@ -6,20 +6,24 @@
 
   "dependencies": {
     //"Microsoft.NETCore.App": "1.1.0"
-      "NETStandard.Library": "1.6.1"
-    },
+    "NETStandard.Library": "1.6.1"
+  },
 
-    "runtimes": {
-      "win7-x64": {}
-    },
+  //"runtimes": {
+  //  "win7-x64": {}
+  //},
 
-    "frameworks": {
-        "net45": {
+  //"buildOptions": {
+  //  "platform": "x64"
+  //},
 
-        }
+  "frameworks": {
+    "net451": {
 
-      //  "netcoreapp1.1": {
-      //  "imports": "dnxcore50"
-      //}
     }
+
+    //  "netcoreapp1.1": {
+    //  "imports": "dnxcore50"
+    //}
   }
+}
